--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
   <script type="text/babel">
     const root = document.getElementById("root");
     function App() {
-      const [counter, modifier] = React.useState(0);
+      const [counter, setCounter] = React.useState(0);
+      const onClick = () => {
+        setCounter(counter + 1);
+      };
       return (
         <div>
           <h3>Total clicks: {counter}</h3>
-          <button>Click Me</button>
+          <button onClick={onClick}>Click Me</button>
         </div>
       );
     }
